@@ -1,16 +1,15 @@
 package forge.gui.util;
 
+import com.google.common.collect.Iterables;
+import forge.gui.GuiBase;
+import forge.util.FSerializableFunction;
+
+import org.apache.commons.lang3.StringUtils;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-
-import org.apache.commons.lang3.StringUtils;
-
-import com.google.common.base.Function;
-import com.google.common.collect.Iterables;
-
-import forge.gui.GuiBase;
 
 public class SGuiChoose {
 
@@ -31,7 +30,7 @@ public class SGuiChoose {
     public static <T> T oneOrNone(final String message, final T[] choices) {
         return oneOrNone(message, choices, null, null);
     }
-    public static <T> T oneOrNone(final String message, final T[] choices, T selected, Function<T, String> display) {
+    public static <T> T oneOrNone(final String message, final T[] choices, T selected, FSerializableFunction<T, String> display) {
         if ((choices == null) || (choices.length == 0)) {
             return null;
         }
@@ -41,15 +40,19 @@ public class SGuiChoose {
     public static <T> T oneOrNone(final String message, final Collection<T> choices) {
         return oneOrNone(message, choices, null, null);
     }
-    public static <T> T oneOrNone(final String message, final Collection<T> choices, T selected, Function<T, String> display) {
+    public static <T> T oneOrNone(final String message, final Collection<T> choices, T selected, FSerializableFunction<T, String> display) {
         if ((choices == null) || choices.isEmpty()) {
             return null;
         }
-        final List<T> choice = SGuiChoose.getChoices(message, 0, 1, choices, selected, display);
+        final List<T> choice = SGuiChoose.getChoices(message, 0, 1, choices, selected == null ? null : List.of(selected), display);
         return choice.isEmpty() ? null : choice.get(0);
     }
 
     public static <T> T one(final String message, final Collection<T> choices) {
+        return one(message, choices, null, null);
+    }
+
+    public static <T> T one(final String message, final Collection<T> choices, T selected, FSerializableFunction<T, String> display) {
         if (choices == null || choices.isEmpty()) {
             return null;
         }
@@ -57,7 +60,7 @@ public class SGuiChoose {
             return Iterables.getFirst(choices, null);
         }
 
-        final List<T> choice = SGuiChoose.getChoices(message, 1, 1, choices);
+        final List<T> choice = SGuiChoose.getChoices(message, 1, 1, choices, selected == null ? null : List.of(selected), display);
         assert choice.size() == 1;
         return choice.get(0);
     }
@@ -148,13 +151,13 @@ public class SGuiChoose {
     public static <T> List<T> getChoices(final String message, final int min, final int max, final T[] choices) {
         return getChoices(message, min, max, Arrays.asList(choices), null, null);
     }
-    public static <T> List<T> getChoices(final String message, final int min, final int max, final T[] choices, final T selected, final Function<T, String> display) {
-        return getChoices(message, min, max, Arrays.asList(choices), selected, display);
+    public static <T> List<T> getChoices(final String message, final int min, final int max, final T[] choices, final T selected, final FSerializableFunction<T, String> display) {
+        return getChoices(message, min, max, Arrays.asList(choices), selected == null ? null : List.of(selected), display);
     }
     public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices) {
         return getChoices(message, min, max, choices, null, null);
     }
-    public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices, final T selected, final Function<T, String> display) {
+    public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices, final Collection<T> selected, final FSerializableFunction<T, String> display) {
         return GuiBase.getInterface().getChoices(message, min, max, choices, selected, display);
     }
 
